Updated readme, so user only uses script.